--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta charset="UTF-8" />
+    <title>Chess Board</title>
+
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
-    
+<div class="board" id="board"></div>
+
+<script src="app.js">
+
+</script>
 </body>
 </html>
